@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.562 2006/01/03 02:31:38 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.563 2006/01/03 04:09:36 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,6 +12,7 @@
   update sub-progress after each package is emerged
   skip tar, symlink fixup, and copy from image dir to / if no files in CONTENTS
   call get_best_version_vdb() instead of get_best_version_vdb_chroot()
+  remove link if it exists before moving content into place
   src/GLIArchitectureTemplate.py:
   install_packages() now calls emerge() in GLIPortage
   change all calls to self._emerge() to self._portage.emerge()
